<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/before_image" />

    <ImageView
        android:id="@+id/imageview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageview1"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/after_image" />

    <Button
        android:id="@+id/improve_button"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="145dp"
        android:background="@drawable/round_button"
        android:text="@string/improve_image_text"
        android:textColor="#fff" />

    <Button
        android:id="@+id/load_button"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/load_button_text"
        android:textColor="#fff" />

    <Button
        android:id="@+id/save_image"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_alignTop="@id/improve_button"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="100dp"
        android:layout_toEndOf="@id/improve_button"
        android:background="@drawable/round_button"
        android:text="@string/save"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/info_button"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_alignTop="@id/improve_button"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@id/save_image"
        android:background="@drawable/round_button"
        android:text="@string/info"
        android:textColor="#FFFFFF" />

    <RadioGroup
        android:id="@+id/enhanceMethods"
        android:layout_width="134dp"
        android:layout_height="92dp"
        android:layout_alignTop="@id/improve_button"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="92dp"
        android:layout_toStartOf="@id/improve_button"
        android:checkedButton="@id/testEnhancerRadio"
        android:gravity="start|end">

        <RadioButton
            android:id="@+id/testEnhancerRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_enhancer"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/vTransformRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v_transform"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/smartEnhanceRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smart_enhance"
            android:textSize="12sp" />
    </RadioGroup>

</RelativeLayout>
